--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
         if(user === userBenar && pass === passBenar){
             //alert("Login berhasil!");
-            window.open("htmlRevoU.html", "_self");
+            window.open("Pesan.html", "_self");
             // bisa diarahkan ke halaman lain:
             // window.location.href = "dashboard.html";
         } else {
